[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Towers/TowerInteractionArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 143, 111 )

[node name="InteractArea" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 57 )
shape = SubResource( 1 )

[node name="InteractLabel" type="Label" parent="."]
margin_top = -93.0
margin_right = 40.0
margin_bottom = -79.0
rect_scale = Vector2( 2.99193, 2.99193 )
text = "[F]"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupDialog" type="ConfirmationDialog" parent="CanvasLayer"]
pause_mode = 2
margin_left = 36.0
margin_top = 196.0
margin_right = 436.0
margin_bottom = 336.0
rect_min_size = Vector2( 400, 140 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PopupDialog/MarginContainer"]
margin_left = 10.0
margin_top = 20.0
margin_right = 374.0
margin_bottom = 86.0
custom_constants/separation = 10

[node name="UpgradeButton" type="Button" parent="CanvasLayer/PopupDialog/MarginContainer/VBoxContainer"]
margin_left = 107.0
margin_right = 257.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Buy this cool upgrade"

[node name="DeconstructButton" type="Button" parent="CanvasLayer/PopupDialog/MarginContainer/VBoxContainer"]
margin_left = 45.0
margin_top = 30.0
margin_right = 319.0
margin_bottom = 50.0
size_flags_horizontal = 6
text = "This tower sucks. I want my money back."

[connection signal="body_entered" from="." to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractArea_body_exited"]
[connection signal="popup_hide" from="CanvasLayer/PopupDialog" to="." method="_on_PopupDialog_popup_hide"]
